[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/git-addon/scenes/Git.gd" type="Script" id=1]
[ext_resource path="res://addons/git-addon/images/icons8-git-48.png" type="Texture" id=2]

[node name="Git" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="GridContainer" type="GridContainer" parent="HSplitContainer"]
margin_right = 77.0
margin_bottom = 560.0

[node name="TextureRect" type="TextureRect" parent="HSplitContainer/GridContainer"]
margin_right = 77.0
margin_bottom = 48.0
texture = ExtResource( 2 )

[node name="Status" type="Button" parent="HSplitContainer/GridContainer"]
margin_top = 52.0
margin_right = 77.0
margin_bottom = 72.0
text = "Status"

[node name="Commit" type="Button" parent="HSplitContainer/GridContainer"]
margin_top = 76.0
margin_right = 77.0
margin_bottom = 96.0
text = "Commit"

[node name="Push" type="Button" parent="HSplitContainer/GridContainer"]
margin_top = 100.0
margin_right = 77.0
margin_bottom = 120.0
text = "Push"

[node name="Pull" type="Button" parent="HSplitContainer/GridContainer"]
margin_top = 124.0
margin_right = 77.0
margin_bottom = 144.0
text = "Pull"

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/GridContainer"]
margin_top = 148.0
margin_right = 77.0
margin_bottom = 198.0
custom_constants/margin_top = 50

[node name="Add" type="Button" parent="HSplitContainer/GridContainer"]
margin_top = 202.0
margin_right = 77.0
margin_bottom = 222.0
text = "Add"

[node name="MarginContainer2" type="MarginContainer" parent="HSplitContainer/GridContainer"]
margin_top = 226.0
margin_right = 77.0
margin_bottom = 266.0
custom_constants/margin_top = 40

[node name="Label" type="Label" parent="HSplitContainer/GridContainer"]
margin_top = 270.0
margin_right = 77.0
margin_bottom = 284.0
text = "Select"

[node name="SelAll" type="Button" parent="HSplitContainer/GridContainer"]
margin_top = 288.0
margin_right = 77.0
margin_bottom = 308.0
text = "All"

[node name="SelUntracked" type="Button" parent="HSplitContainer/GridContainer"]
margin_top = 312.0
margin_right = 77.0
margin_bottom = 332.0
text = "Untracked"

[node name="SelNone" type="Button" parent="HSplitContainer/GridContainer"]
margin_top = 336.0
margin_right = 77.0
margin_bottom = 356.0
text = "None"

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer"]
margin_left = 89.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer/VSplitContainer"]
margin_right = 895.0
margin_bottom = 126.0

[node name="Label" type="Label" parent="HSplitContainer/VSplitContainer/VSplitContainer"]
margin_right = 895.0
margin_bottom = 14.0
text = "Commit Message"

[node name="CommitMessage" type="TextEdit" parent="HSplitContainer/VSplitContainer/VSplitContainer"]
margin_top = 26.0
margin_right = 895.0
margin_bottom = 126.0
rect_min_size = Vector2( 0, 100 )

[node name="Tabs" type="TabContainer" parent="HSplitContainer/VSplitContainer"]
margin_top = 138.0
margin_right = 895.0
margin_bottom = 560.0

[node name="FilesList" type="ItemList" parent="HSplitContainer/VSplitContainer/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
select_mode = 1
auto_height = true

[node name="Output" type="TextEdit" parent="HSplitContainer/VSplitContainer/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 400 )
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
[connection signal="pressed" from="HSplitContainer/GridContainer/Status" to="." method="_on_Status_pressed"]
[connection signal="pressed" from="HSplitContainer/GridContainer/Commit" to="." method="_on_Commit_pressed"]
[connection signal="pressed" from="HSplitContainer/GridContainer/Push" to="." method="_on_Push_pressed"]
[connection signal="pressed" from="HSplitContainer/GridContainer/Pull" to="." method="_on_Pull_pressed"]
[connection signal="pressed" from="HSplitContainer/GridContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="HSplitContainer/GridContainer/SelAll" to="." method="_on_SelAll_pressed"]
[connection signal="pressed" from="HSplitContainer/GridContainer/SelUntracked" to="." method="_on_SelUntracked_pressed"]
[connection signal="pressed" from="HSplitContainer/GridContainer/SelNone" to="." method="_on_SelNone_pressed"]
